[package]
name = "nom-json-parser"
version = "0.1.0"
authors = ["Chang He <changhe3@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.1"
anyhow = "1.0.26"
ascii = "1.0.0"
shrinkwraprs = "0.3.0"
derive_more = "0.99.3"
itertools = "0.8.2"
regex = "1.3.4"
lazy_static = "1.4.0"
cow-utils = "0.1.2"
maplit = "1.0.2"
